--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,7 +23,8 @@ jobs:
     
     strategy:
       matrix:
-        os: [ubuntu-lastest]
+        os: [ubuntu-latest, windows-2016]
+        node-version: [8.x, 10.x]
         node-version: [10.x]
  
     steps:
