--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,6 +11,7 @@ jobs:
       - name: npm install and build webpack
         run: |
           npm install
+          npm run build
       - uses: actions/upload-artifact@master
         with:
           name: webpack artifacts
